--- a/front-end/src/components/Nav.css
+++ b/front-end/src/components/Nav.css
@@ -19,3 +19,11 @@
 .nav-right{
     text-align: right;
 }
+
+.logo{
+width: 45px;
+float: left;
+border-radius: 50%;
+margin-top: 3px;
+margin-left: 20px;
+}
