--- a/front-end/src/components/ProductList.css
+++ b/front-end/src/components/ProductList.css
@@ -12,3 +12,23 @@
 .Product-list ul{
     margin: 0;
 }
+
+
+.deleteButton {
+    background-color: red;
+    color: white;
+    border: none;
+    /* padding: 8px 16px; */
+    font-size: 18px;
+    cursor: pointer;
+    /* margin-top: 5px; */
+    border-radius: 2px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.deleteButton:hover {
+    background-color: darkred;
+    transform: scale(1.05);
+}
+
+
